--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3,36 +3,39 @@
 <head>
   <meta charset="utf-8">  
   <title>Prototype HTML5 Assignment | Cristal Castle-McCall</title>
-  <meta name="description" content="Collection of information on the Buffalo National River">
+  <meta name="description" content="Collection of information on Lake Greeson and Narrows Dam">
   <meta name="author" content="Cristal Castle-McCall">
+  <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Lake Greeson and Narrows Dam</h1>
     <h2>Physical Charactersitics</h2>
-    <dl>
-      <dt>Lake Greeson</dt>
-      <dd>Length: 12 Mi (19.31 km)</dd>
-      <dd>Public Land Area: 15,842 Acres </dd>
-      <dt>Narrows Dam</dt>
-      <dd>Type: Concrete, Hydroelectric</dd>
-      <dd>Output: 28,000,000 Kw/h</dd>
-      <dd>Dedicated: July 1951</dd>
+    <ul>
+      <li>Lake Greeson</li>
+      <ul>
+      <li>Length: 12 Mi (19.31 km)</li>
+      <li>Public Land Area: 15,842 Acres </li>
+    </ul>
+      <li>Narrows Dam</li>
+      <ul>
+      <li>Type: Concrete, Hydroelectric</li>
+      <li>Output: 28,000,000 Kw/h</li>
+      <li>Dedicated: July 1951</li>
+    </ul>
 
-    </dl>
+    </ul>
   
     <h2>Location of Lake Greeson and Narrows Dam</h2>
     <p>Lake Greeson and Narrows Dam, in Southwest Arkansas, are located 6 miles north of Murfresboro, Arkansas near the Dam Area Recreation Area and Swaha Lodge and Marina. It is also part of the Vicksburg DIstrict of the Army Corps of Engineers and Narrows Dam is the only all-concrete dam in the district. Lake Greeson is 12 miles long and is surrounded by 15,842 acres of public lands. The hydroelectric power house houses three generators and produces 28,000,000 KWh of electricity. 
     </p>
     <h2>History</h2>
-    <p>In 1941, Narrows Dam was authorized as a flood control and hydroelectric power project by the Flood COntrol Act of 1941. COnstruction on the dam began in April of 1947, the first bucket of concrete was poured in June of 1948, and the dam was completed in 1950. The completion of the dam then created the resivoir known as Lake Greeson.  </p>
-    <p>Narrows Dam was named for where it is located on the river, at The Narrows. When the dam was built, several cemeteries and graveyards had to be moved due to the creation of Lake Greeson.</p>
+    <p>In 1941, Narrows Dam was authorized as a flood control and hydroelectric power project by the Flood COntrol Act of 1941. COnstruction on the dam began in April of 1947, the first bucket of concrete was poured in June of 1948, and the dam was completed in 1950. Narrows Dam was named for where it is located on the river, at The Narrows. When the dam was built, several cemeteries and graveyards had to be moved due to the creation of Lake Greeson.  </p>
     <h2>Description</h2>
     <p>Lake Greeson is divided into 3 layers to allow Narrows Dam to operate properly. THe Bottom portion of the lake is always full to provide enough pressure for the powerhouse to operate. The middle, or Power Storage layer, is used to regulate the flow of running water into the generators. The top layer, or Flood Strage portion is usually empty unless holding floodwater. Floodwater has only rushed over the spillway of the dam twice since its' completion. Once in 1968, and the second time in May of 2009 after heavy rains in the area. </p>
     <p>Lake Gresson is a popular camping, hiking, boating, hunting, and fishing destination for many. The lake boasts many campgrounds, marinas, recreation areas, over 30 miles of hiking trails, and the Lake Greeson Wildlife Management Area. Visitiors can bring their own boats or rent a vessel from one of the marinas on the lake. Lake Greeson has 11 campgrounds range from Class A with modern amenties such as RV hookups to Primitive campsites with only the basics. It is also a wintering site for Bald Eagles. Lake Greeson hosts a wide variety of wildlife such as whitettail deer, turkey, Canada Geese, raccoons, squirrels, turtles, and many other bird species. It is also home to a wide array of fish species such as catfish, bass, crappie, perch, and gar.
         <h2>Receration Areas</h2>
         <section id="table">
             <table border="1">
-      <caption>Campgrounds</caption>
       <thead>
       <tr>
         <th>Area</th>
