--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>IT Pearl | Cristal Castle-McCall</title>
   <meta name="description" content="COllection of Work for IT Pearl">
   <meta name="author" content="Cristal Castle-McCall">
+  <link href="prototype/assets/css/style.css" rel="stylesheet">
 
 </head>
 
