--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
   <h1>Cristal Castle-McCall</h1>
-  <a href="prototype/index.html">Home</a>
+  <ul>
+  <li><a href="prototype/index.html">Home</a></li>
+  <li><a href="css-demo/index.html">CSS Demo</a></ul></li>
 </body>
 </html>
