--- a/prototype/index.html
+++ b/prototype/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  
   <meta charset="utf-8">  
   <title>Prototype HTML5 Assignment | Cristal Castle-McCall</title>
   <meta name="description" content="Collection of information on Lake Greeson and Narrows Dam">
   <meta name="author" content="Cristal Castle-McCall">
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@200;300;400;500;600;700;800&family=Rosario:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <h1>Lake Greeson and Narrows Dam</h1>
