added validation file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <h1>Cristal Castle-McCall</h1>
   <ul>
   <li><a href="prototype/index.html">Home</a></li>
-  <li><a href="css-demo/index.html">CSS Demo</a></ul></li>
+  <li><a href="css-demo/index.html">CSS Demo</a>
+  <li><a href="validation/index.html">Validation</a></li>
+  </ul>
 </body>
 </html>
