--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <li><a href="prototype/index.html">Home</a></li>
   <li><a href="css-demo/index.html">CSS Demo</a>
   <li><a href="validation/index.html">Validation</a></li>
+  <li><a href="cheatsheet/index.html">Cheatsheet</a></li>
   </ul>
 </body>
 </html>
