--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
   <li><a href="validation/index.html">Validation</a></li>
   <li><a href="cheatsheet/index.html">Cheatsheet</a></li>
   </ul>
+  <ul>
+    <li>Positioning Labs</li>
+    <li><a href="positioning-lab/float-1.html">Float 1</a> </li>
+    <li><a href="positioning-lab/float-2.html">Float 2</a> </li>
+    <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
+    <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
+  </ul>
 </body>
 </html>
