--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
   <li><a href="css-demo/index.html">CSS Demo</a>
   <li><a href="validation/index.html">Validation</a></li>
   <li><a href="cheatsheet/index.html">Cheatsheet</a></li>
+  <li><a href="circle/index.html">Circle Assignmen</a>t</li>
   </ul>
+  <h2>Positioning Labs</h2>
   <ul>
-    <li>Positioning Labs</li>
     <li><a href="positioning-lab/float-1.html">Float 1</a> </li>
     <li><a href="positioning-lab/float-2.html">Float 2</a> </li>
     <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
