--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>IT Pearl | Cristal Castle-McCall</title>
-  <meta name="description" content="COllection of Work for IT Pearl">
+  <meta name="description" content="Collection of Work for IT Pearl">
   <meta name="author" content="Cristal Castle-McCall">
   <link href="prototype/assets/css/style.css" rel="stylesheet">
 
