--- a/circle/index.html
+++ b/circle/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
+    <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -22,17 +23,12 @@
         <br>
         
         <label class="formlabel">Diameter:</label><span id="diameter"></span><br>
-        <label class="formlabel">Circumference:</label><span id="circumference"></span><br>
+        <label class="formlabel">Circumference:</label><span id=""></span><br>
         <label class="formlabel">Area:</label><span id="area"></span><br>
         <br><br>
-        <input type="submit" value="Calculate" id="btnSubmitCalculate">
+        <input type="submit" value="Calculate" id="btnSubmitCalculate" onclick="CircleCalculations()">
         <input type="submit" value="Clear" id="btnSubmitClear">
     </form>
-<script>
-$( "#CircleForm" ).validate({
-document:getElementById("diameter").innerHtml="";
-let diameter= 2*radius;
-});
-</script>
+<script src="assets/js/circle.js"></script>
 </body>
 </html>
