fixed javascript errors

--- a/circle/index.html
+++ b/circle/index.html
@@ -23,7 +23,7 @@
         <br>
         
         <label class="formlabel">Diameter:</label><span id="diameter"></span><br>
-        <label class="formlabel">Circumference:</label><span id=""></span><br>
+        <label class="formlabel">Circumference:</label><span id="circumference"></span><br>
         <label class="formlabel">Area:</label><span id="area"></span><br>
         <br><br>
         <input type="submit" value="Calculate" id="btnSubmitCalculate" onclick="CircleCalculations()">
