--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <li><a href="positioning-lab/float-2.html">Float 2</a> </li>
     <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
     <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
-    <li><a href="positioning-lab/float-3.html">Absolute 2</a></li>
-    <li><a href="positioning-lab/absolute-3.html">Absolute 2</a></li>
-    <li><a href="positioning-lab/grid.html">Absolute 2</a></li>
-    <li><a href="positioning-lab/flexbox.html">Absolute 2</a></li>
+    <li><a href="positioning-lab/float-3.html">Float 3</a></li>
+    <li><a href="positioning-lab/absolute-3.html">Absolute 3</a></li>
+    <li><a href="positioning-lab/grid.html">Grid</a></li>
+    <li><a href="positioning-lab/flexbox.html">Flexbox</a></li>
   </ul>
 </body>
 </html>
