added css to positioning labs

--- a/positioning-lab/absolute-3.html
+++ b/positioning-lab/absolute-3.html
@@ -28,24 +28,47 @@
       background-color: #FFF;
       border: 1px solid #c0c0c0;
       width: 800px;
+      height:225px;
       margin-right: auto;
       margin-left: auto;
       text-shadow: 2px 2px #000;
     }
     #navy {
       background-color: #001f3f;
+      position:absolute;
+      float:left;
+      width: 175px;
+      height:150px;
+      margin:20px 20px 20px 20px
     }
     #teal {
       background-color: #39CCCC;
+      position:absolute;
+      float:left;
+      width: 175px;
+      height:150px;
+      margin:20px 20px 20px 215px
     }
     #blue {
       background-color: #0074D9;
+      position: absolute;
+      float: right;
+      width: 175px;
+      height:150px;
+      margin:20px 100px 100px 410px;
     }
     #aqua {
       background-color: #7FDBFF;
+      position: absolute;
+      float: right;
+      width: 175px;
+      height:150px;
+      margin:20px 90px 100px 600px;
     }
     #footer {
       background-color: #666;
+      clear:both;
+      margin: 185px 20px 0 20px;
     }
     h1 {
       color: #000;
