--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <li><a href="css-demo/index.html">CSS Demo</a>
   <li><a href="validation/index.html">Validation</a></li>
   <li><a href="cheatsheet/index.html">Cheatsheet</a></li>
-  <li><a href="circle/index.html">Circle Assignmen</a>t</li>
+  <li><a href="circle/index.html">Circle Assignment</a></li>
   </ul>
   <h2>Positioning Labs</h2>
   <ul>
