added calculator project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <li><a href="validation/index.html">Validation</a></li>
   <li><a href="cheatsheet/index.html">Cheatsheet</a></li>
   <li><a href="circle/index.html">Circle Assignment</a></li>
+  <li><a href="calculator/index.html">Calculator Assignment</a></li>
   </ul>
   <h2>Positioning Labs</h2>
   <ul>
