--- a/positioning-lab/absolute-1.html
+++ b/positioning-lab/absolute-1.html
@@ -87,10 +87,10 @@
 <body>
   <h1>Exercise</h1>
   <section id="wrapper">
-    <div id="navy">Navy</div>
-    <div id="teal">Teal</div>
-    <div id="blue">Blue</div>
-    <div id="aqua">Aqua</div>
+    <div id="navy" class="box">Navy</div>
+    <div id="teal" class="box">Teal</div>
+    <div id="blue" class="box">Blue</div>
+    <div id="aqua" class="box">Aqua</div>
     <div id="footer">Footer</div>
   </section>
 </body>
