--- a/positioning-lab/float-2.html
+++ b/positioning-lab/float-2.html
@@ -32,31 +32,27 @@
       margin-left: auto;
       text-shadow: 2px 2px #000;
     }
+    .box{
+      width:175px;
+      height:150px;
+    }
     #navy {
       background-color: #001f3f;
-      width: 175px;
-      height:150px;
       float:left;
       margin: 20px 10px 10px 20px;
     }
     #teal {
       background-color: #39CCCC;
-      width:175px;
-      height:150px;
       float:left;
       margin: 20px 5px 10px 10px;
     }
     #blue {
       background-color: #0074D9;
-      width:175px;
-      height:150px;
       float:right;
       margin: 20px 20px 10px 10px;
     }
     #aqua {
       background-color: #7FDBFF;
-      width:175px;
-      height:150px;
       float:right;
       margin: 20px 10px 15px 10px
     }
@@ -76,10 +72,10 @@
 <body>
   <h1>Exercise</h1>
   <section id="wrapper">
-    <div id="navy">Navy</div>
-    <div id="teal">Teal</div>
-    <div id="blue">Blue</div>
-    <div id="aqua">Aqua</div>
+    <div id="navy" class="box">Navy</div>
+    <div id="teal" class="box">Teal</div>
+    <div id="blue"class="box">Blue</div>
+    <div id="aqua" class="box">Aqua</div>
     <div id="footer">Footer</div>
   </section>
 </body>
