added html to blog.html, added cs and js.

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -27,7 +27,7 @@
             <label class="error" for="Operand1" id="Operand1Error"></label>
             <br><br>
             <label class="formlabel">Operator: </label>
-            <label for="PludOperator">
+            <label for="PlusOperator">
                 <input type="radio" name="Operator" id="PlusOperator" value="Plus"
                        data-rule-required="true" data-msg-required="Operator is Required" />+
             </label>
