--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <section id="links">
   <h1>Cristal Castle-McCall</h1>
   <ul>
   <li><a href="prototype/index.html">Home</a></li>
@@ -20,6 +21,8 @@
   <li><a href="cheatsheet/index.html">Cheatsheet</a></li>
   <li><a href="circle/index.html">Circle Assignment</a></li>
   <li><a href="calculator/index.html">Calculator Assignment</a></li>
+  <li><a href="prototype/index.html">Prototype HTML</a></li>
+  <li><a href="blog.html">Image Optimization Blog</a></li>
   </ul>
   <h2>Positioning Labs</h2>
   <ul>
@@ -32,5 +35,6 @@
     <li><a href="positioning-lab/grid.html">Grid</a></li>
     <li><a href="positioning-lab/flexbox.html">Flexbox</a></li>
   </ul>
+</section>
 </body>
 </html>
