--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="JavaScript Calculator">
     <meta name="keywords" content="JavaScript, HTML, CSS">
-    <meta name="author" content="Bruce Bauer">
+    <meta name="author" content="Cristal Castle-McCall">
     <title>JavaScript Calculator</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -26,33 +25,40 @@
                    data-rule-number="true" data-msg-number="Operand 1 must be a Number">
             <label class="error" for="Operand1" id="Operand1Error"></label>
             <br><br>
-            <label class="formlabel">Operator: </label>
-            <label for="PlusOperator">
-                <input type="radio" name="Operator" id="PlusOperator" value="Plus"
-                       data-rule-required="true" data-msg-required="Operator is Required" />+
-            </label>
-            <label for="MinusOperator">
-                <input type="radio" name="Operator" id="MinusOperator" value="Minus">-
-            </label>
-            <label for="MultiOperator">
-                <input type="radio" name="Operator" id="MultiOperator" value="Multi">*
-            </label>
-        <label for="Operator" class="error" id="OperatorError"></label>
-        <br>
+      
             <label class="formlabel" for="Operand2">Operand 2: </label>
             <input type="text" id="Operand2" name="Operand2" size="15" maxlength="15"       
                    data-rule-required="true"  data-msg-required="Operand 2 is Required" 
                    data-rule-number="true" data-msg-number="Operand 2 must be a Number">
             <label class="error" for="Operand2" id="Operand2Error"></label>
-            <br>
+            <br><br>
 
-           <br>
+            <label class="formlabel" for="Operand3">Operand 3: </label>
+            <input type="text" id="Operand3" name="Operand3" size="15" maxlength="15"       
+                   data-rule-required="true"  data-msg-required="Operand 3 is Required" 
+                   data-rule-number="true" data-msg-number="Operand 3 must be a Number">
+            <label class="error" for="Operand3" id="Operand3Error"></label>
+            <br><br>
+
+            <label class="formlabel">Operator: </label>
+                <label for="MinOperator">
+                    <input type="radio" name="Operator" id="MinOperator" value="Min"
+                           data-rule-required="true" data-msg-required="Operator is Required" />Min
+                </label>
+                <label for="MaxOperator">
+                    <input type="radio" name="Operator" id="MaxOperator" value="Max">Max
+                </label>
+                <label for="AvgOperator">
+                    <input type="radio" name="Operator" id="AvgOperator" value="Avg">Avg
+                </label>
+           
+            <br><br>
 
             <label class="formlabel">Result: </label>
             <span id="Result"></span>
-            <br>
+            <br><br>
 
-            <input type="button" value="Calculate" name="Calculate" onclick="calculate();">
+            <input type="button" value="Calculate" name="Calculate" onclick="JavascriptCalculations();">
             <input type="button" value="Clear" name="Clear" onclick="clearform();" novalidate>
 
         </fieldset>
