--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
 <body>
   <section id="links">
+    <header class="main-header">
   <h1>Cristal Castle-McCall</h1>
-  <ul>
+  <ul id="one">
   <li><a href="prototype/index.html">Home</a></li>
   <li><a href="css-demo/index.html">CSS Demo</a>
   <li><a href="validation/index.html">Validation</a></li>
@@ -23,18 +24,21 @@
   <li><a href="calculator/index.html">Calculator Assignment</a></li>
   <li><a href="prototype/index.html">Prototype HTML</a></li>
   <li><a href="blog.html">Image Optimization Blog</a></li>
-  </ul>
-  <h2>Positioning Labs</h2>
-  <ul>
-    <li><a href="positioning-lab/float-1.html">Float 1</a> </li>
-    <li><a href="positioning-lab/float-2.html">Float 2</a> </li>
-    <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
-    <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
-    <li><a href="positioning-lab/float-3.html">Float 3</a></li>
-    <li><a href="positioning-lab/absolute-3.html">Absolute 3</a></li>
-    <li><a href="positioning-lab/grid.html">Grid</a></li>
-    <li><a href="positioning-lab/flexbox.html">Flexbox</a></li>
-  </ul>
+  <li><a href="microsite/index.html"></a></li>
+  
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Positioning Labs</a>
+    <div class="dropdown-content"> <a href="javascript:void(0)" class="dropbtn"></a>
+      <div class="dropdown-content">
+    <a href="positioning-lab/float-1.html">Float 1</a> 
+    <a href="positioning-lab/float-2.html">Float 2</a> 
+    <a href="positioning-lab/absolute-1.html">Absolute 1</a>
+    <a href="positioning-lab/absolute-2.html">Absolute 2</a>
+    <a href="positioning-lab/float-3.html">Float 3</a>
+    <a href="positioning-lab/absolute-3.html">Absolute 3</a>
+    <a href="positioning-lab/grid.html">Grid</a>
+    <a href="positioning-lab/flexbox.html">Flexbox</a></li>
+  </ul></div></header>
 </section>
 </body>
 </html>
