added html, css, and pages

--- a/blog.html
+++ b/blog.html
@@ -41,5 +41,8 @@
     </p>
     <img src="prototype/assets/img/Logo Blog.jpg" alt="Wave Logo">
   </section>
+  <footer id="colophon" role="contentinfo">
+    <h6>&copy; 2025 Cristal Castle-McCall</h6>
+  </footer>
 </body>
 </html>
