--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <li><a href="calculator/index.html">Calculator Assignment</a></li>
   <li><a href="prototype/index.html">Prototype HTML</a></li>
   <li><a href="blog.html">Image Optimization Blog</a></li>
-  <li><a href="microsite/index.html"></a></li>
+  <li><a href="microsite/index.html">Microsite Project</a></li>
+  <li><a href="unitsconversion/index.html">Unit Conversion</a></li>
+
   
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Positioning Labs</a>
