--- a/microsite/lodging.html
+++ b/microsite/lodging.html
@@ -28,7 +28,7 @@
    
   </header>
   <section id="content" class="container">
-    <h2>Island Beach State Park: A Gem on the Jersey Shore</h2>
+    <h2>Camping and Lodging</h2>
     <p>The park is a 10 mile barrier island shaped by storms and tides that saperates the historic Bargnegat Bay from the Atlantic Ocean.
         Island Beach State Park is one of New Jersey's last significant reminants of a barrier island ecosystem that once existed along much of the coast and is one of the few remaining undeveloped barrier beaches on the north atlantic coast. The dunes and white sandy beaches provide habitat for a diverse population of plants and widlife that is 
       almost the same as it was thousands of years ago.   </p>
