--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="JavaScript Calculator">
     <meta name="keywords" content="JavaScript, HTML, CSS">
-    <meta name="author" content="Cristal Castle-McCall">
+    <meta name="author" content="Bruce Bauer">
     <title>JavaScript Calculator</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -33,37 +34,33 @@
             <label class="error" for="Operand2" id="Operand2Error"></label>
             <br><br>
 
-            <label class="formlabel" for="Operand3">Operand 3: </label>
-            <input type="text" id="Operand3" name="Operand3" size="15" maxlength="15"       
-                   data-rule-required="true"  data-msg-required="Operand 3 is Required" 
-                   data-rule-number="true" data-msg-number="Operand 3 must be a Number">
-            <label class="error" for="Operand3" id="Operand3Error"></label>
-            <br><br>
 
             <label class="formlabel">Operator: </label>
-                <label for="MinOperator">
-                    <input type="radio" name="Operator" id="MinOperator" value="Min"
-                           data-rule-required="true" data-msg-required="Operator is Required" />Min
+                <label for="AddOperator">
+                    <input type="radio" name="Operator" id="AddOperator" value="Add"
+                           data-rule-required="true" data-msg-required="Operator is Required" />+
                 </label>
-                <label for="MaxOperator">
-                    <input type="radio" name="Operator" id="MaxOperator" value="Max">Max
+                <label for="SubOperator">
+                    <input type="radio" name="Operator" id="SubOperator" value="Sub">-
                 </label>
-                <label for="AvgOperator">
-                    <input type="radio" name="Operator" id="AvgOperator" value="Avg">Avg
+                <label for="MultiOperator">
+                    <input type="radio" name="Operator" id="MultiOperator" value="Multi">*
                 </label>
-           
+                <label for="DivOperator">
+                    <input type="radio" name="Operator" id="DivOperator" value="Div">/
+                </label>
+            <label for="Operator" class="error" id="OperatorError"></label>
             <br><br>
 
             <label class="formlabel">Result: </label>
             <span id="Result"></span>
             <br><br>
 
-            <input type="button" value="Calculate" name="Calculate" onclick="JavascriptCalculations();">
+            <input type="button" value="Calculate" name="Calculate" onclick="calculate();">
             <input type="button" value="Clear" name="Clear" onclick="clearform();" novalidate>
 
         </fieldset>
     </div>
 </form>
-<script src="assets/js/script"></script>
+<script src="assets/js/calculator.js"></script>
 </body>
-</html>
