added html and css

--- a/microsite/lodging.html
+++ b/microsite/lodging.html
@@ -37,6 +37,42 @@
       </p>
     <p>The park also offers many recreational activities. From swimming and fishing to boating and hiking, there's something for everyone to enjoy. </p>
     </section>
+    <div class="col">
+      <h2>Contact Info</h2>
+      <h3>Phone:</h3>
+      <p>732-793-0506</p>
+      <h3>Physical Address:</h3>
+      <p>2401 Central Ave.
+        Seaside Park, NJ 
+      </p>
+      <h3>Mailing Address:</h3>
+      <p>P.O. Box 37
+        Seaside Park, NJ
+      </p>
+      <h3>Email: islandbeach@dept.nj.gov</h3>
+      <p>2401 Central Ave.
+        Seaside Park, NJ 
+      </p>
+      <h2>Park Hours</h2>
+      <h3>Gate:</h3>
+      <p>8:00 A.M. to Dusk daily
+      </p>
+      <h3>Office:</h3>
+      <p> Weekdays 8am - 4pm
+        Sat. & Sun. 8am - 6pm 
+      </p>
+      <h2>Park Fees</h2>
+      <h3>Weekdays:</h3>
+      <p> NJ Residents: $6.00 Non-Residents: $12.00
+      </p>
+      <h3>Weekends and Holidays:</h3>
+      <p> NJ Residents: $10.00 Non-Residents: $20.00
+      </p>
+      <h3>Off-Season:</h3>
+      <p> NJ Residents: $5.00 Non-Residents: $10.00
+      </p>
+    </div>
+ 
 
  
   
