--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -102,8 +102,7 @@
           <p>Quisque justo erat, varius placerat fermentum vel, iaculis vel ligula. Phasellus et elit purus. Curabitur ipsum enim, scelerisque vitae condimentum ac, cursus eget quam. Nullam volutpat dui ut risus pulvinar at fringilla sem tristique. Nulla facilisi.
             Donec posuere euismod purus, eu scelerisque risus pellentesque eu. Vestibulum sed tincidunt metus. <a href="#">Read More &raquo;</a></p>
           <footer>Widget Footer</footer>
-        </article>
-      </div>
+        </article>.     </div>
     </aside>
     <footer id="colophon" role="contentinfo">
       <h6>&copy; 2024 Your Name</h6>
