added css, js, html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body class="main-body">
   <section id="links">
     <header class="main-header">
   <h1>Cristal Castle-McCall</h1>
@@ -24,6 +24,7 @@
   <li><a href="calculator/index.html">Calculator Assignment</a></li>
   <li><a href="prototype/index.html">Prototype HTML</a></li>
   <li><a href="blog.html">Image Optimization Blog</a></li>
+  <li><a href="logo.html">Logo</a></li>
   <li><a href="microsite/index.html">Microsite Project</a></li>
   <li><a href="unitsconversion/index.html">Unit Conversion</a></li>
 
@@ -41,6 +42,10 @@
     <a href="positioning-lab/grid.html">Grid</a>
     <a href="positioning-lab/flexbox.html">Flexbox</a></li>
   </ul></div></header>
+  
 </section>
+<footer id="colophon" role="contentinfo">
+    <h6>&copy; 2025 Cristal Castle-McCall</h6>
+  </footer>
 </body>
 </html>
