--- a/microsite/activities.html
+++ b/microsite/activities.html
@@ -15,6 +15,8 @@
 
 <body>
   <header role="banner" class="primary">
+    <img src="https://nj.gov/dep/parksandforests/images/deplogo-header.png" alt="Logo" class="logo">
+    <img src="https://nj.gov/dep/parksandforests/images/spslogo-header.png" alt="Logo" class="logo">
     <h1>Island Beach State Park</h1> 
     <nav class="topnav">
       <ul>
@@ -96,13 +98,19 @@
       <h3>Off-Season:</h3>
       <p> NJ Residents: $5.00 Non-Residents: $10.00
       </p>
+      <h3>Additional Resources</h3>
+      <ul>
+        <li><a href="https://nj.gov/dep/parksandforests/parks/islandbeachstatepark.html">NJ State Parks</a></li>
+        <li><a href="https://www.islandbeachnj.org/">islandbeachnj.org</a></li>
+      </ul>
     </div>
  
  
   
  
-  <footer id="colophon" role="contentinfo">
-    <h6>&copy; 2025 Cristal Castle-McCall</h6>
+   <footer id="colophon" role="contentinfo">
+    <h6>&copy; 2025 | Cristal Castle-McCall|
+ <a href="mailto:ccastle@ualr.edu">Send email</a>|<a href="#top">Back To Top</a></h6>
   </footer>
 
 </body>
