--- a/microsite/index.html
+++ b/microsite/index.html
@@ -15,7 +15,10 @@
 
 <body>
   <header role="banner" class="primary">
-    <h1>Island Beach State Park</h1> 
+    <img src="https://nj.gov/dep/parksandforests/images/deplogo-header.png" alt="Logo" class="logo">
+    <img src="https://nj.gov/dep/parksandforests/images/spslogo-header.png" alt="Logo" class="logo">
+    <h1>Island Beach State Park</h1>   
+   
     <nav class="topnav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -24,7 +27,7 @@
         <li><a href="maps.html">Maps</a></li>
       </ul>
     </nav>
-   
+  
    
   </header>
   <section id="content" class="container">
@@ -84,11 +87,16 @@
       <h3>Off-Season:</h3>
       <p> NJ Residents: $5.00 Non-Residents: $10.00
       </p>
+      <h3>Additional Resources</h3>
+      <ul>
+        <li><a href="https://nj.gov/dep/parksandforests/parks/islandbeachstatepark.html">NJ State Parks</a></li>
+        <li><a href="https://www.islandbeachnj.org/">islandbeachnj.org</a></li>
+      </ul>
     </div>
  
   
   <footer id="colophon" role="contentinfo">
-    <h6>&copy; 2025 | Cristal Castle-McCall|
+    <h6>&copy; 2025 | Cristal Castle-McCall | 
  <a href="mailto:ccastle@ualr.edu">Send email</a>|<a href="#top">Back To Top</a></h6>
   </footer>
 
