--- a/microsite/maps.html
+++ b/microsite/maps.html
@@ -30,14 +30,12 @@
    
   </header>
   <section id="content" class="container">
-    <h2>Island Beach State Park: A Gem on the Jersey Shore</h2>
-    <p>The park is a 10 mile barrier island shaped by storms and tides that saperates the historic Bargnegat Bay from the Atlantic Ocean.
-        Island Beach State Park is one of New Jersey's last significant reminants of a barrier island ecosystem that once existed along much of the coast and is one of the few remaining undeveloped barrier beaches on the north atlantic coast. The dunes and white sandy beaches provide habitat for a diverse population of plants and widlife that is 
-      almost the same as it was thousands of years ago.   </p>
-      <p>New Jersey's largest osprey colony as well as waterfowl, perigrine falcons, shorebirds, wading birds, and songbirds call the park home. The park is natitionally recognized for being a unique resource
-        with more than 400 identifed species of plants and the largest expanses of beach heather in New Jersey.
-      </p>
-    <p>The park also offers many recreational activities. From swimming and fishing to boating and hiking, there's something for everyone to enjoy. </p>
+    <h2>Maps</h2>
+     <h3>Park Map</h3>
+
+     <h3>Trail Map</h3>
+
+    <p> </p>
     </section>
 
     <div class="col">
