--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <li><a href="logo.html">Logo</a></li>
   <li><a href="microsite/index.html">Microsite Project</a></li>
   <li><a href="unitsconversion/index.html">Unit Conversion</a></li>
+  <li><a href="currencyconversion/index.html">Currency Conversion</a></li>
+  <li><a href="slick-demo/index.html">Slick Demo</a></li>
+
 
   
   <li class="dropdown">
