--- a/currencyconversion/index.html
+++ b/currencyconversion/index.html
@@ -1,65 +1,52 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="JavaScript Calculator">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta charset="UTF-8">
+    <meta name="description" content="Currency Converter">
     <meta name="keywords" content="JavaScript, HTML, CSS">
-    <meta name="author" content="Bruce Bauer">
-    <title>JavaScript Calculator</title>
-    <link rel="stylesheet" type="text/css" href="assets/style/calculator.css">
+    <meta name="author" content="Cristal Castle-McCall">
+    <title>Currency Value History</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <title>Currency Converter</title>
+
 </head>
 <body>
-<form id="myform" onsubmit="return false;">
-    <div class="formcontainer">
-        <h1>Javascript Calculator (AJAX) Using Fetch</h1>
-        <fieldset id="detail">
-            <legend>Calculator (AJAX)</legend>  
-            <br>
-            
-            <label class="formlabel" for="Operand1">Operand 1: </label>
-            <input type="text" id="Operand1" name="Operand1" size="15" maxlength="15"
-                    data-rule-required="true"  data-msg-required="Operand 1 is Required" 
-                    data-rule-number="true" data-msg-number="Operand 1 must be a Number">
-            <label for="Operand1" class="error" id="Operand1Msg"></label>
-            <br><br>
-
-            <label class="formlabel">Operator: </label>
-                <label for="AddOperator">
-                    <input type="radio" name="Operator" id="AddOperator" value = "+"
-                           data-rule-required="true" data-msg-required="Operator is Required" />+
-                </label>
-                <label for="AddOperator">
-                    <input type="radio" name="Operator" id="SubtractOperator" value = "-">-
-                </label>
-                <label for="AddOperator">
-                    <input type="radio" name="Operator" id="MultiplyOperator" value = "*">*
-                </label>
-                <label for="AddOperator">
-                    <input type="radio" name="Operator" id="DivideOperator" value = "/">/
-                </label>
-            <label for="Operator" class="error" id="OperatorMsg"></label>
-            <br><br>
-      
-            <label class="formlabel" for="Operand2">Operand 2: </label>
-            <input type="text" id="Operand2" name="Operand2" size="15" maxlength="15"
-                    data-rule-required="true"  data-msg-required="Operand 2 is Required" 
-                    data-rule-number="true" data-msg-number="Operand 2 must be a Number">
-            <label for="Operand2" class="error" id="Operand2Msg"></label>
-            <br><br>
-
-            <label class="formlabel">Result: </label>
-            <span id="Result"></span>
-            <br><br>
-
-            <input type="button" value="Calculate" name="Calculate" onclick="calculate();">
-            <input type="button" value="Clear" name="Clear" onclick="clearform();">
-
-        </fieldset>
+    <div class="converter">
+        <h2>Currency Value History</h2>
+       <br>
+        <label class="formlabel" for="baseCurrency">Base Currency: </label><select id="baseCurrency" data-rule-required="true"data-msg-required="Base Currency is Required">
+            <option value="">Select a Currency...</option>
+            <option value="USD">Us Dollars</option>
+            <option value="USD">Us Dollars</option>
+            <option value="EUR">Euros</option>
+            <option value="GBP">GBP</option>
+            <option value="INR">INR</option>
+        </select>
+        <label for="baseCurrency" class="error" id="baseCurrencymsg"></label>
+        <br><br>
+        <label class="formlabel" for="toCurrency">Convert to Currnecy: </label><select id="toCurrency"data-rule-required="true"data-msg-required="Convert to Currency is Required">
+            <option value="">Select a Currency...</option>
+            <option value="USD">USD</option>
+            <option value="USD">USD</option>
+            <option value="EUR">EUR</option>
+            <option value="GBP">GBP</option>
+            <option value="INR">INR</option>
+        </select>
+        <label for="toCurrency" class="error" id="toCurrencymsg"></label> 
+        <br><br>
+        <label class="formlabel" for="fromdate">From Date: </label>
+        <input type="date" id="fromdate" placeholder="Select date"data-rule-required="true" data-msg-required="From Date is Required">
+        <br><br>
+        <label class="formlabel" for="todate">To Date: </label>
+        <input type="date" id="todate" placeholder="Select date"data-rule-required="true" data-msg-required="To Date is Required">
+    <br>
+        <input type="button" value="Show Results" name="Calculate" onclick="calculate();">
+      <input type="button" value="Clear" name="Clear" onclick="clearform(); "novalidate>
+        <h3 id="result"></h3>
     </div>
-</form>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
-<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
-<script src="assets/scripts/calculator.js"></script>
+
+   
 </body>
 </html>
