--- a/microsite/maps.html
+++ b/microsite/maps.html
@@ -31,11 +31,11 @@
   </header>
   <section id="content" class="container">
     <h2>Maps</h2>
-     <h3>Park Map</h3>
-
-     <h3>Trail Map</h3>
-
-    <p> </p>
+     <h3> <a href="https://nj.gov/dep/parksandforests/maps/islandbeach-area.pdf">Park Map</a></h3>
+    <img src="https://nj.gov/dep/parksandforests/images/pagecontent/mapthumbs/islandbeach-area-thumb.jpg" alt="map thumbnail">
+   
+     <h3><a href="https://nj.gov/dep/parksandforests/trailguides/docs/IBSP.pdf">Trail Map</a></h3>
+    
     </section>
 
     <div class="col">
@@ -78,6 +78,7 @@
         <li><a href="https://www.islandbeachnj.org/">islandbeachnj.org</a></li>
       </ul>
     </div>
+
  
   
  
