added projectreflection page and progressive enhancement post

--- a/currencyconversion/index.html
+++ b/currencyconversion/index.html
@@ -19,20 +19,20 @@
         <label class="formlabel" for="baseCurrency">Base Currency: </label><select id="baseCurrency" data-rule-required="true"data-msg-required="Base Currency is Required">
             <option value="">Select a Currency...</option>
             <option value="USD">Us Dollars</option>
-            <option value="USD">Us Dollars</option>
+            <option value="USD">Swiss Francs</option>
             <option value="EUR">Euros</option>
-            <option value="GBP">GBP</option>
-            <option value="INR">INR</option>
+            <option value="GBP">Chinese Yen</option>
+            <option value="INR">Mexican Pesos</option>
         </select>
         <label for="baseCurrency" class="error" id="baseCurrencymsg"></label>
         <br><br>
         <label class="formlabel" for="toCurrency">Convert to Currnecy: </label><select id="toCurrency"data-rule-required="true"data-msg-required="Convert to Currency is Required">
             <option value="">Select a Currency...</option>
-            <option value="USD">USD</option>
-            <option value="USD">USD</option>
-            <option value="EUR">EUR</option>
-            <option value="GBP">GBP</option>
-            <option value="INR">INR</option>
+            <option value="USD">US Dollars</option>
+            <option value="USD">Swiss Francs</option>
+            <option value="EUR">Euros</option>
+            <option value="GBP">Yen</option>
+            <option value="INR">Pesos</option>
         </select>
         <label for="toCurrency" class="error" id="toCurrencymsg"></label> 
         <br><br>
