--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
   <li><a href="cheatsheet/index.html">Cheatsheet</a></li>
   <li><a href="circle/index.html">Circle Assignment</a></li>
   <li><a href="calculator/index.html">Calculator Assignment</a></li>
-  <li><a href="prototype/index.html">Prototype HTML</a></li>
-  <li><a href="blog.html">Image Optimization Blog</a></li>
+  <li><a href="prototype/index.html">Prototype HTML</a></li> 
+ <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Blogs</a>
+    <div class="dropdown-content"> <a href="javascript:void(0)" class="dropbtn"></a>
+      <div class="dropdown-content">
+        <a href="blog.html">Image Optimization Blog</a>
+        <a href="projectreflection.html">Project Reflection Blog</a></li>
+  </div>
   <li><a href="logo.html">Logo</a></li>
   <li><a href="microsite/index.html">Microsite Project</a></li>
   <li><a href="unitsconversion/index.html">Unit Conversion</a></li>
   <li><a href="currencyconversion/index.html">Currency Conversion</a></li>
   <li><a href="slick-demo/index.html">Slick Demo</a></li>
-
+ 
 
   
   <li class="dropdown">
@@ -43,11 +49,34 @@
     <a href="positioning-lab/float-3.html">Float 3</a>
     <a href="positioning-lab/absolute-3.html">Absolute 3</a>
     <a href="positioning-lab/grid.html">Grid</a>
-    <a href="positioning-lab/flexbox.html">Flexbox</a></li>
-  </ul></div></header>
+    <a href="positioning-lab/flexbox.html">Flexbox</a>
+      </li></div></header>
   
 </section>
-<footer id="colophon" role="contentinfo">
+<section class="thoughts">
+  <h2>Thoughts on Progressive Enhancement</h2>
+  <p>Progressive Enhancement is extremely important in modern web design for many reasons. From acessibility to performance, progressive enhancement allows websites to function better and provide a better user experience. 
+    To understand why progressive enhancement is so important, we first need to understand what exactly progressive enhancement is.</p>
+    <h3>What is Progressive Enhancement?</h3>
+    <p>Progressive Enhancement is a web-design strategy that begins with a solid base of content and builds outward. The content forms the base on which we layer our stlye and interactivity. This approach to web design is more effective than previous methods such as graceful degradation bewcause it focuses on the most important part of the site: the content. But why is progressive enhacement so important in modern web design?</p>
+    <h3>Progressive Enhacement is a crucial element of modern web design for many reasons:</h3>
+    <dl>
+      <dt>Accessibiliy:</dt>
+      <dd>One of the biggest benefits of progreessive enhancement is is the focus on accessibility. By starting with a strong foundation in our HTML, we can ensure that our content is available to all users, including those with disabilities.</dd> 
+      <dt>Speed and Performance:</dt>
+      <dd>Sites built using progressive enhancement tend to load faster due to proritization of essential content and functionality. Enhancements are only loaded when needed, reducing the consumption of bandwidth and speeding up loading times. This is very helpful for users who have a slower internet connecction or live in area with limited internet access.</dd>
+        <dt>Future-Proofing:</dt>
+        <dd>As the web evolves, devices and browsers are changing constantly. Progressive enhancement ensures that our sites remain accessible and functional as new technology is released. This means that our sites will continue to operate smoothly into the future minimizing the need for redesigns and overhauls which can be costly.</dd>
+          <dt>Enhanced User Experience:</dt>
+          <dd>Progressive enhancement provides a user experience that is tailored to each user's needs. Users who have a basic browser get a readable and functional site, while those with more advanced browsers still get an enhanced experience.</dd>
+    </dl>
+    <h3>Conclusion</h3>
+      <p>In conclusion, progressive enhancement is essential element of modern web design as it allows us to make sure it's accessible to all users, use less bandwidth, and prevent costly overhauls in the future.</p>    
+      <h3>More Info on this Subject:</h3>
+      <a href="https://blog.hubspot.com/website/what-is-progressive-enhancement">What is Progressive Enhancement?</a>
+        
+</section>
+<footer id="colophon" role="contentinfo" class="main">
     <h6>&copy; 2025 Cristal Castle-McCall</h6>
   </footer>
 </body>
