added gallery html, css, and js

--- a/microsite/index.html
+++ b/microsite/index.html
@@ -24,7 +24,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="activities.html">Activities</a></li>
         <li><a href="lodging.html">Camping and Lodging</a></li>
-        <li><a href="maps.html">Maps</a></li>
+        <li><a href="gallery.html">Photo</a></li>
       </ul>
     </nav>
   
@@ -80,6 +80,11 @@
       <ul>
         <li><a href="https://nj.gov/dep/parksandforests/parks/islandbeachstatepark.html">NJ State Parks</a></li>
         <li><a href="https://www.islandbeachnj.org/">islandbeachnj.org</a></li>
+      </ul>
+      <h3>Maps</h3>
+        <ul>
+         <li> <a href="https://nj.gov/dep/parksandforests/maps/islandbeach-area.pdf">Park Map</a></li>
+        <li><a href="https://nj.gov/dep/parksandforests/trailguides/docs/IBSP.pdf">Trail Map</a></li>
       </ul>
     </div>
  
