--- a/projectreflection.html
+++ b/projectreflection.html
@@ -10,36 +10,20 @@
   <link href="prototype/assets/css/style.css" rel="stylesheet">
 </head>
 
-<body>
-  <a href="index.html">
+<body class="main-body">
   <header class="main-header">
-    <h1>Cristal Castle-McCall</h1>
-  </header></a>
-  <section id="content" class="container">
-  <h1>Image Optimization: Why is it important?</h1>
-  <p>In today's fast-paced, tech focused world, users expect websites to load quickly and deliver seamless browsing. One of the biggest factors affecting website performance and speed is image optimization. Whether you're running a blog, corporate website, or an e-commerce site, properly enhanced images 
-    can greatly enhance how well the website performs. Image optimization should be a top priority in web development due to the following reasons: </p>
-  <h2>1. Improves Website Load Speed</h2>
-  <p>Images make up a considerable amount of a websites weight. If an image is too large, the page will take much longer to load. This can frustrate users and even drive them away.
-    By compressing images and using appropriate formats, you can optimize the load speed of your website, keeping users engaged. </p>
-    <h2>2. Enhances User Experience</h2>
-    <p>A slow loading website can lead to a poor experince for the user which, in turn, can lead to more useres leaving the site. Optimized 
-      images ensure that your website loads quickly and smoothly accross all devices, providing a better user experience. Responive image techniques also allow images to
-      adjust to any screen size automatically, ensuring that mobile users get the same experience as desktop users.
-    </p>
-    <h2>3.Boosts SEO Rankings</h2>
-    <p>Search engines, like Google, prioritize sites with good user experience and fast load speeds. Optimized images ensure that websites load quickly, which can enhance the site's rankings in search results.</p>
-    <h2>4. Reduces bandwidth and storage costs</h2>
-    <p>
-      Images that haven't been optomized consume unneccessary server space and bandwidth, slowing down content delivery and raising hosting costs.
-      By using modern image formats, such as WebP and reducing file sizes, you can reduce operational costs and bandwidth usage while maintaining high-quality visuals. 
-    </p>
-    <h2>Conclusion</h2>
-    <p>Image optimization is a key component of web design that directly impacts things such as loading speed and user experince. By implementing optimization techniques, 
-      you can create a visually stunning website that loads quickly and keeps users engaged. Prioritizing image optimization not only 
-      enhances your website's performance, but also contributes to a more successful and user-friendly online presence.
-    </p>
-    <img src="" alt="Wave Logo">
+    <h1>Microsite Project Reflection</h1>
+  </header>
+  <section id="content" class="reflection">
+  <h2>Project Reflection</h2>
+  <p>For the past few weeks, we have been working on our Micro Site projects. We also had a peer reveiw of our sites in order to get different perspectives and pinpoint any issues our site may have. For my project, I chose to build a website for Island Beach State Park in New Jersey. You can check it out here: <a href="https://improved-carnival-v664gq46jpwqfpr5r-5510.app.github.dev/microsite/index.html">Island Beach State Park</a> I recieved great feedback from many of my peers and they pointed out things I could improve. In this post, I will reflect on the development experience, the peer reviews, what I did well, and what I could improve. First, I'll reflect on the development process.
+  </p>
+  <h3>Development Process</h3>
+  <p>This project was a great learining expereince for me. I used and built on many skills I already have and learned new skills, such as javascript. While I've worked with Javascript some before, it was pretty limited. For this project, I've had to go deeper and use more Javascript than I had previously. As with any project, there were things I did well and things I could improve. 
+  </p>
+  <h3>What I Did well</h3>
+  <p>There were several things I felt that I did well in this project. I'm very proud of the overall layout and design of the site as well as the functionality.</p>
+   
   </section>
   
   <footer id="colophon" role="contentinfo">
