--- a/microsite/gallery.html
+++ b/microsite/gallery.html
@@ -25,6 +25,8 @@
         <li><a href="activities.html">Activities</a></li>
         <li><a href="lodging.html">Camping and Lodging</a></li>
         <li><a href="gallery.html">Photo Gallery</a></li>
+        <li><a href="weather.html">Weather</a></li>
+        <li><a href="https://form.jotform.com/250764781544161">Contact</a></li>
       </ul>
     </nav>
    
@@ -124,10 +126,9 @@
     captionText.innerHTML = dots[slideIndex-1].alt;
   }
   </script>
-<footer> 
   <footer id="colophon" role="contentinfo">
-    <h6>&copy; 2025 | Cristal Castle-McCall|
- <a href="mailto:ccastle@ualr.edu">Send email</a>|<a href="#top">Back To Top</a></h6>
-  </footer></footer>
+    <h6>&copy; 2025 | Cristal Castle-McCall | 
+ <a href="mailto:ccastle@ualr.edu">ccastle@ular.edu</a>|<a href="https://form.jotform.com/250764781544161">Contact</a></li></a><a href="#top">Back To Top</a></h6>
+  </footer>
 </body>
 </html>
