--- a/unitsconversion/index.html
+++ b/unitsconversion/index.html
@@ -63,7 +63,7 @@
                 <input type="radio" name="tounit" id="tokilometers" value = "kilometers">kilometers
             </label>
             <label for="toinches">
-                <input type="radio" name="tounit" id="toinch" value = "inches">inches
+                <input type="radio" name="tounit" id="toinches" value = "inches">inches
             </label>
             <label for="tofeet">
                 <input type="radio" name="tounit" id="tofeet" value = "feet">feet
