corrected html and script

--- a/microsite/index.html
+++ b/microsite/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <title>Island Beach State Park</title>
-  <meta charset="UTF-8" />
-  <meta name="description" content="a collection of information about Island Beach State Park" />
-  <meta name="author" content="Cristal Castle-McCall" />
+  <meta charset="UTF-8" >
+  <meta name="description" content="a collection of information about Island Beach State Park" >
+  <meta name="author" content="Cristal Castle-McCall" >
   <meta name="robots" content="noindex">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" >
 </head>
 
 <body>
@@ -93,7 +93,7 @@
   
   <footer id="colophon" role="contentinfo">
     <h6>&copy; 2025 | Cristal Castle-McCall | 
- <a href="mailto:ccastle@ualr.edu">ccastle@ular.edu</a>|<a href="https://form.jotform.com/250764781544161">Contact</a></li></a><a href="#top">Back To Top</a></h6>
+ <a href="mailto:ccastle@ualr.edu">ccastle@ular.edu</a>|<a href="https://form.jotform.com/250764781544161">Contact</a>|<a href="#top">Back To Top</a></h6>
   </footer>
 
 </body>
