added img and content to projectreflection.html

--- a/projectreflection.html
+++ b/projectreflection.html
@@ -14,16 +14,25 @@
   <header class="main-header">
     <h1>Microsite Project Reflection</h1>
   </header>
-  <section id="content" class="reflection">
-  <h2>Project Reflection</h2>
-  <p>For the past few weeks, we have been working on our Micro Site projects. We also had a peer reveiw of our sites in order to get different perspectives and pinpoint any issues our site may have. For my project, I chose to build a website for Island Beach State Park in New Jersey. You can check it out here: <a href="https://improved-carnival-v664gq46jpwqfpr5r-5510.app.github.dev/microsite/index.html">Island Beach State Park</a> I recieved great feedback from many of my peers and they pointed out things I could improve. In this post, I will reflect on the development experience, the peer reviews, what I did well, and what I could improve. First, I'll reflect on the development process.
+ 
+  <section id="content" class="reflection"> 
+   
+  <h2>Project Reflection</h2> 
+  <img src="prototype/assets/img/Screenshot 2025-03-21 192500.png" class="page" alt="microsite screenshot">
+  <p>For the past few weeks, we have been working on our Micro Site projects. We also had a peer reveiw of our sites in order to get different perspectives and pinpoint any issues our site may have. For my project, I chose to build a website for Island Beach State Park in New Jersey. You can check it out here: <a href="https://cristalccm.github.io/IT-Pearl/microsite/index.html">Island Beach State Park</a> I recieved great feedback from many of my peers and they pointed out things I could improve. In this post, I will reflect on the development experience, the peer reviews, what I did well, and what I could improve. First, I'll reflect on the development process.
   </p>
   <h3>Development Process</h3>
-  <p>This project was a great learining expereince for me. I used and built on many skills I already have and learned new skills, such as javascript. While I've worked with Javascript some before, it was pretty limited. For this project, I've had to go deeper and use more Javascript than I had previously. As with any project, there were things I did well and things I could improve. 
+  <p>This project was a great learining expereince for me. I used and built on many skills I already have and learned new skills, such as javascript. While I've worked with Javascript some before, it was pretty limited. For this project, I've had to go deeper and use more Javascript than I had previously.  As with any project, there were things I did well and things I could improve. My peers also gave valuable insight on the project.
   </p>
+  <h3>Peer Reviews</h3>
+  <p>The peer reviews were a great way to get imput from each other about the design and function of our sites. The reviews for my site were very positive, with a few suggestions to make it better here and there. One classmate sugessted I might change the header font to give the page a more beachy feel. We were all respectful and gave each other constructive criticism to help improve our projects.</p>
   <h3>What I Did well</h3>
-  <p>There were several things I felt that I did well in this project. I'm very proud of the overall layout and design of the site as well as the functionality.</p>
-   
+  <p> There are several things that I think I did well in this project. The design is responsive and consistent, it's easy to navigate, and I think everything is laid out well. I'm very proud of the overall layout and design of the site as well as the functionality.</p>
+   <h3>What I Could Improve</h3>
+   <p>While I am very happy with this project, there is always room for improvement. I can always build and improve my JavaScript skills, and the layout could be even better. I could also possibly choose a different font for the main header to make it more asthetic.
+   </p>
+   <h3>Conclusion</h3>
+   <p>In conclusion, this project has been a great learning experience overall. I have built on the skills I already have and have learned new skills. The feedback from my peers was very positive and they suggested things I could tweak. I feel I did very well, though there is always room for improvement. </p>
   </section>
   
   <footer id="colophon" role="contentinfo">
