added css and changed nav label to gallery

--- a/microsite/activities.html
+++ b/microsite/activities.html
@@ -23,7 +23,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="activities.html">Activities</a></li>
         <li><a href="lodging.html">Camping and Lodging</a></li>
-        <li><a href="gallery.html">Photo Gallery</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="weather.html">Weather</a></li>
         <li><a href="https://form.jotform.com/250764781544161">Contact</a></li>
       </ul>
