--- a/microsite/gallery.html
+++ b/microsite/gallery.html
@@ -24,7 +24,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="activities.html">Activities</a></li>
         <li><a href="lodging.html">Camping and Lodging</a></li>
-        <li><a href="gallery.html">Photo Gallery</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="weather.html">Weather</a></li>
         <li><a href="https://form.jotform.com/250764781544161">Contact</a></li>
       </ul>
@@ -33,7 +33,7 @@
    
   </header>
 <section id="content" class="container">
-<h2>Photo Gallery</h2>
+<h2 class="gallery">Photo Gallery</h2>
 <div class="slide-container">
 
   <div class="mySlides">
