validated html for homepage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h1>Cristal Castle-McCall</h1>
   <ul id="one">
   <li><a href="prototype/index.html">Home</a></li>
-  <li><a href="css-demo/index.html">CSS Demo</a>
+  <li><a href="css-demo/index.html">CSS Demo</a></li>
   <li><a href="validation/index.html">Validation</a></li>
   <li><a href="cheatsheet/index.html">Cheatsheet</a></li>
   <li><a href="circle/index.html">Circle Assignment</a></li>
@@ -26,10 +26,9 @@
  <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Blogs</a>
     <div class="dropdown-content"> <a href="javascript:void(0)" class="dropbtn"></a>
-      <div class="dropdown-content">
         <a href="blog.html">Image Optimization Blog</a>
-        <a href="projectreflection.html">Project Reflection Blog</a></li>
-  </div>
+        <a href="projectreflection.html">Project Reflection Blog</a>
+  </div></li>
   <li><a href="logo.html">Logo</a></li>
   <li><a href="microsite/index.html">Microsite Project</a></li>
   <li><a href="unitsconversion/index.html">Unit Conversion</a></li>
@@ -41,7 +40,6 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Positioning Labs</a>
     <div class="dropdown-content"> <a href="javascript:void(0)" class="dropbtn"></a>
-      <div class="dropdown-content">
     <a href="positioning-lab/float-1.html">Float 1</a> 
     <a href="positioning-lab/float-2.html">Float 2</a> 
     <a href="positioning-lab/absolute-1.html">Absolute 1</a>
@@ -50,7 +48,7 @@
     <a href="positioning-lab/absolute-3.html">Absolute 3</a>
     <a href="positioning-lab/grid.html">Grid</a>
     <a href="positioning-lab/flexbox.html">Flexbox</a>
-      </li></div></header>
+      </div></li></ul></header>
   
 </section>
 <section class="thoughts">
