--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   <li><a href="unitsconversion/index.html">Unit Conversion</a></li>
   <li><a href="currencyconversion/index.html">Currency Value History</a></li>
   <li><a href="slick-demo/index.html">Slick Demo</a></li>
+  <li><a href="buffalosedge/index.html">Team Project</a></li>
+ 
+
  
 
   
